Fix content width gap on large screens by disabling Tailwind container plugin

--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -360,7 +360,7 @@ code,
 }
 
 .container {
-  @apply mx-auto my-0 max-w-full pl-4 lg:pl-10;
+  @apply mx-auto my-0 max-w-full;
 }
 
 html {
